--- a/project/PROJECT/Project.html
+++ b/project/PROJECT/Project.html
@@ -100,6 +100,60 @@
 			<li><a href="">Thư viện</li>
 		</ul>
 	</div>
+
 	<hr>
+	<div class="body">
+	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+ 		<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+   		<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+   		<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+   		<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+   		<li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+   		<li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+   		<li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+   		<li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+   		<li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+	</ol>
+	<div class="carousel-inner">
+    <div class="carousel-item active">
+     	<img class="d-block w-100" src="Pics/1.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+     	<img class="d-block w-100" src="Pics/2.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+     	<img class="d-block w-100" src="Pics/3.png" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+     	<img class="d-block w-100" src="Pics/3.png" alt="Fourth slide">
+    </div>
+    <div class="carousel-item">
+     	<img class="d-block w-100" src="Pics/4.jpg" alt="Fifth slide">
+    </div>
+    <div class="carousel-item">
+     	<img class="d-block w-100" src="Pics/5.jpg" alt="Sixth slide">
+    </div>
+    <div class="carousel-item">
+     	<img class="d-block w-100" src="Pics/6.jpg" alt="Seventh slide">
+    </div>
+    <div class="carousel-item">
+     	<img class="d-block w-100" src="Pics/7.jpg" alt="Eighth slide">
+    </div>
+    <div class="carousel-item">
+     	<img class="d-block w-100" src="Pics/8.jpg" alt="Ninth slide">
+    </div>
+ 	</div>
+ 	<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+   	<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+   	<span class="sr-only">Previous</span>
+ 	</a>
+ 	<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+   	<span class="carousel-control-next-icon" aria-hidden="true"></span>
+   	<span class="sr-only">Next</span>
+ 	</a>
+</div>
+
+</div>
 </body>
 </html>
